wyłączanie mysql po zamknięciu zakończone prace związane z modelem